--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
 <body>
 <header class="header">
 <ul class="header__ul">
-    <li class="header__li"> <H3 class="header__h3 stylepoint">Projetos</H3></li>
+    <li class="header__li"> <H3 class="header__h3 stylepoint">COLETAS</H3></li>
     <li class="header__li"><H3 class="header__h3 stylepoint">Calendario</H3></li>
     <li class="header__li"> <button class="button_li allButtons  stylepoint">Entrar</button></li>
-    <li class="header__li"> <img src="./fotos/user-icon-on-transparent-background-free-png.webp" alt="fotoPerfil" width="140px" height="80px" 
-        class="stylepoint"></li>
+    <li class="header__li" > <i class="fa-solid fa-bars"></i>
+
 </ul>
 
 </header>
 
 <section class="meioBotaoPesquisa">
 <button class="button__section allButtons meio__item stylepoint">Criar novo Projeto</button>
+<button class="buttonStatus stylepoint" id="ButtonStatusVermelho"> Não iniciado</button>
+<button class="buttonStatus stylepoint" id="ButtonStatusAmarelo"> Em andamento</button>
+<button class="buttonStatus stylepoint" id="ButtonStatusVerde"> Finalizado</button>
 <input type="search" placeholder="Pesquisar Projetos" class="meio__item pesquisa  stylepoint">
-
 </section>
 
 <main class="mainBlocos">
