--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coletadores</title>
     <link rel="stylesheet" href="paginaicial.css">
-    <script async src="https://cse.google.com/cse.js?cx=134692102cf0a43d7" defer></script>   
+    <script async src="https://cse.google.com/cse.js?cx=134692102cf0a43d7" defer></script>
+    <script defer src="script.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 <body>
 <header class="header">
@@ -28,22 +29,6 @@
 </section>
 
 <main class="mainBlocos">
-    <div class="meio_bloco">
-        <section class="bloco_config">
-            <p>Nome do projeto</p> <i class="fa-solid fa-ellipsis"></i>
-        </section>
-        <section class="bloco_config branco">
-
-        </section>
-
-        <section class="bloco_config blocoBarra" >
-            <div class="barraProgessoAumento" id="barraProgesso">
-                <div class="barra" id="barra_dentro"> </div>
-            </div>
-
-            <div id="mudaCor"></div>
-        </section>
-    </div>
 </main>
  
  
