--- a/paginas/telaRegistro.html
+++ b/paginas/telaRegistro.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="../css/registro.css">
-    <script defer type="module" src="../script.js"></script>
+    <script defer type="module" src="../scriptsss/registrarUsuario.js"></script>
 </head>
 <body>
     <section class="section_class">
