Criação das tabelas para projetos
Criadas todas as tabelas necessárias para o site, conectadas e bem charmosas.

--- a/paginas/paginainicial.html
+++ b/paginas/paginainicial.html
@@ -6,7 +6,7 @@
     <title>Coletadores</title>
     <link rel="stylesheet" href="../css/paginaicial.css">
     <script async src="https://cse.google.com/cse.js?cx=134692102cf0a43d7" defer></script>
-    <script defer src="../scriptsss/script.js"></script>
+    <script defer type="module" src="../scriptsss/codeInicial.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 <body>
 <header class="header">
@@ -38,8 +38,5 @@
 
 <main class="mainBlocos">
 </main>
- 
-
-<script src="../scriptsss/codeInicial.js" type="module"></script> 
 </body>
 </html>
