--- a/paginas/paginainicial.html
+++ b/paginas/paginainicial.html
@@ -24,19 +24,19 @@
         </li>
     <li class="header__li" > <i class="fa-solid fa-bars stylepoint"></i>
 </ul>
-
 </header>
 
 <hr>
 
 <section class="meioBotaoPesquisa">
-    <button class="button__section allButtons meio__item stylepoint">Criar novo Projeto</button>
+    <button class="button__section allButtons meio__item stylepoint" id="id_botao_criarProjeto">Criar novo Projeto</button>
     <button class="buttonStatus stylepoint" id="ButtonStatusVermelho"> Não iniciado</button>
     <button class="buttonStatus stylepoint" id="ButtonStatusAmarelo"> Em andamento</button>
     <button class="buttonStatus stylepoint" id="ButtonStatusVerde"> Finalizado</button>
 </section>
 
-<main class="mainBlocos">
+<main class="mainBlocos" id="id_mainBlocos">
+    
 </main>
 </body>
 </html>
