Sistema de salvar login
Adicionado o sistema de salvar login. Caso o usuário saia da página logado, ele poderá voltar e ainda estará logado.

--- a/paginas/paginainicial.html
+++ b/paginas/paginainicial.html
@@ -9,34 +9,36 @@
     <script defer type="module" src="../scriptsss/codeInicial.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 <body>
-<header class="header">
-<ul class="header__ul">
-    <li class="header__li" id="headerLogo"> <img src="../fotos/icon.png" id="iconeHeader" alt=""><H3 class="header__h3 stylepoint">AtlasFlow</H3></li>
-    <li class="header__li"><H3 class="header__h3 stylepoint">Calendário</H3></li>
-    <li>
-    <div class="pesquisa">
-        <input type="search" placeholder="Pesquisar Projetos" class="meio__item pesquisaInput">
-        <i class="fa-solid fa-magnifying-glass "></i>
-    </div>
-    </li>
-    <li class="header__li">
-       <a href="./paginaMudarsenha.html"> <button class="button_li allButtons stylepoint">Entrar</button></a> 
-        </li>
-    <li class="header__li" > <i class="fa-solid fa-bars stylepoint"></i>
-</ul>
-</header>
+    <header class="header">
+        <ul class="header__ul">
+            <li class="header__li" id="headerLogo"> <img src="../fotos/icon.png" id="iconeHeader" alt=""><H3 class="header__h3 stylepoint">AtlasFlow</H3></li>
+            <li class="header__li"><H3 class="header__h3 stylepoint">Calendário</H3></li>
+            <li>
+                <div class="pesquisa">
+                    <input type="search" placeholder="Pesquisar Projetos" class="meio__item pesquisaInput">
+                    <i class="fa-solid fa-magnifying-glass "></i>
+                </div>
+            </li>
+            <li class="header__li">
+                <a href="./paginaMudarsenha.html"> <button class="button_li allButtons stylepoint">Entrar</button></a> 
+            </li>
+            <li class="header__li">
+                <a href="../index.html"><button class="button_li allButtons stylepoint" id="id_botao_sair">sair</button></a> 
+            </li>
+            <li class="header__li" ><i class="fa-solid fa-bars stylepoint"></i></li>
+        </ul>
+    </header>
 
-<hr>
+    <hr>
 
-<section class="meioBotaoPesquisa">
-    <button class="button__section allButtons meio__item stylepoint" id="id_botao_criarProjeto">Criar novo Projeto</button>
-    <button class="buttonStatus stylepoint" id="ButtonStatusVermelho"> Não iniciado</button>
-    <button class="buttonStatus stylepoint" id="ButtonStatusAmarelo"> Em andamento</button>
-    <button class="buttonStatus stylepoint" id="ButtonStatusVerde"> Finalizado</button>
-</section>
+    <section class="meioBotaoPesquisa">
+        <button class="button__section allButtons meio__item stylepoint" id="id_botao_criarProjeto">Criar novo Projeto</button>
+        <button class="buttonStatus stylepoint" id="ButtonStatusVermelho">Não iniciado</button>
+        <button class="buttonStatus stylepoint" id="ButtonStatusAmarelo">Em andamento</button>
+        <button class="buttonStatus stylepoint" id="ButtonStatusVerde">Finalizado</button>
+    </section>
 
-<main class="mainBlocos" id="id_mainBlocos">
-    
-</main>
+    <main class="mainBlocos" id="id_mainBlocos">
+    </main>
 </body>
 </html>
