Atualização que não me lembro
Não lembro oq q eu fiz.

--- a/paginas/paginainicial.html
+++ b/paginas/paginainicial.html
@@ -23,7 +23,7 @@
                 <a href="./paginaMudarsenha.html"> <button class="button_li allButtons stylepoint">Entrar</button></a> 
             </li>
             <li class="header__li">
-                <a href="../index.html"><button class="button_li allButtons stylepoint" id="id_botao_sair">sair</button></a> 
+                <a href="../index.html"><button class="button_li allButtons stylepoint" id="id_botao_sair">Sair</button></a> 
             </li>
             <li class="header__li" ><i class="fa-solid fa-bars stylepoint"></i></li>
         </ul>
