--- a/paginas/paginaProjetos.html
+++ b/paginas/paginaProjetos.html
@@ -4,11 +4,12 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="../css/projetoPagina.css" />
+        <link rel="stylesheet" href="../css/projetoPagina.css"/>
+        <script defer type="module" src="../scriptsss/codeProjeto.js"></script>
     </head>
     <body>
         <header class="header__principal">
-            <h1 class="header__h1">NOME DO PROJETO</h1>
+            <h1 class="header__h1"></h1>
             <div id="barraProgresso">
                 <h3>Concluido 100%</h3>
                 <div id="progresso"></div>
@@ -16,166 +17,6 @@
         </header>
         <button class="main__botao">Criar novo bloco</button>
         <main class="main__principal">
-            <div class="div__main-projetos">
-                <input
-                    type="text"
-                    class="input__texto"
-                    placeholder="Nome Do Projeto"
-                    value="Novo bloco"
-                />
-                <button class="botao__main_projetos">Criar nova classe</button>
-
-                <div>
-                    <div class="main__projetos-dentro">
-                        <input
-                            type="text"
-                            class="input__texto-dentro"
-                            value="checklist"
-                        />
-                        <button class="botao__main_projetos-dentro">+</button>
-                    </div>
-
-                    <div class="mains__projetos-dentro-2">
-                        <div class="projeto__checkbox">
-                            <input type="checkbox" class="checkbox" />
-                            <label for="projeto__checkbox">Tarefa#01</label>
-                        </div>
-                        <div class="projeto__checkbox">
-                            <input type="checkbox" class="checkbox" />
-                            <label for="projeto__checkbox">Tarefa#01</label>
-                        </div>
-                    </div>
-                </div>
-
-                <div>
-                    <div class="main__projetos-dentro">
-                        <input
-                            type="text"
-                            class="input__texto-dentro"
-                            value="Links"
-                        />
-                        <button class="botao__main_projetos-dentro">+</button>
-                    </div>
-
-                    <div class="mains__projetos-dentro-2">
-                        <div class="projeto__checkbox">
-                            <label for="projeto__checkbox">
-                                <a href="#">link1</a></label
-                            >
-                        </div>
-                        <div class="projeto__checkbox">
-                            <label for="projeto__checkbox">
-                                <a href="#">link2</a></label
-                            >
-                        </div>
-                    </div>
-                </div>
-
-                <div>
-                    <div class="main__projetos-dentro">
-                        <input
-                            type="text"
-                            class="input__texto-dentro"
-                            value="imagens"
-                        />
-                        <button class="botao__main_projetos-dentro">+</button>
-                    </div>
-
-                    <div class="mains__projetos-dentro-2">
-                        <div class="projeto__checkbox">
-                            <label for="projeto__checkbox">
-                                <img src="#" alt="imagens"
-                            /></label>
-                        </div>
-                        <div class="projeto__checkbox">
-                            <label for="projeto__checkbox">
-                                <img src="#" alt="imagens"
-                            /></label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="div__main-projetos">
-                <input
-                    type="text"
-                    class="input__texto"
-                    placeholder="Nome Do Projeto"
-                    value="Novo bloco"
-                />
-                <button class="botao__main_projetos">Criar nova classe</button>
-
-                <div>
-                    <div class="main__projetos-dentro">
-                        <input
-                            type="text"
-                            class="input__texto-dentro"
-                            value="checklist"
-                        />
-                        <button class="botao__main_projetos-dentro">+</button>
-                    </div>
-
-                    <div class="mains__projetos-dentro-2">
-                        <div class="projeto__checkbox">
-                            <input type="checkbox" class="checkbox" />
-                            <label for="projeto__checkbox">Tarefa#01</label>
-                        </div>
-                        <div class="projeto__checkbox">
-                            <input type="checkbox" class="checkbox" />
-                            <label for="projeto__checkbox">Tarefa#01</label>
-                        </div>
-                    </div>
-                </div>
-
-                <div>
-                    <div class="main__projetos-dentro">
-                        <input
-                            type="text"
-                            class="input__texto-dentro"
-                            value="Links"
-                        />
-                        <button class="botao__main_projetos-dentro">+</button>
-                    </div>
-
-                    <div class="mains__projetos-dentro-2">
-                        <div class="projeto__checkbox">
-                            <label for="projeto__checkbox">
-                                <a href="#">link1</a></label
-                            >
-                        </div>
-                        <div class="projeto__checkbox">
-                            <label for="projeto__checkbox">
-                                <a href="#">link2</a></label
-                            >
-                        </div>
-                    </div>
-                </div>
-
-                <div>
-                    <div class="main__projetos-dentro">
-                        <input
-                            type="text"
-                            class="input__texto-dentro"
-                            value="imagens"
-                        />
-                        <button class="botao__main_projetos-dentro">+</button>
-                    </div>
-
-                    <div class="mains__projetos-dentro-2">
-                        <div class="projeto__checkbox">
-                            <label for="projeto__checkbox">
-                                <img src="#" alt="imagens"
-                            /></label>
-                        </div>
-                        <div class="projeto__checkbox">
-                            <label for="projeto__checkbox">
-                                <img src="#" alt="imagens"
-                            /></label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="div__main-projetos">c</div>
         </main>
     </body>
 </html>
