--- a/paginas/paginaProjetos.html
+++ b/paginas/paginaProjetos.html
@@ -6,6 +6,7 @@
         <title>Document</title>
         <link rel="stylesheet" href="../css/projetoPagina.css"/>
         <script defer type="module" src="../scriptsss/codeProjeto.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     </head>
     <body>
         <header class="header__principal">
