--- a/paginas/paginaMudarsenha.html
+++ b/paginas/paginaMudarsenha.html
@@ -1,23 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="../css/paginamudarSenha.css">
-</head>
-<body>
-<section class="conteudo_principal">
-    <h1 class="principal_h1">EDITAR USUÁRIO</h1>
-    <img src="../fotos/user-icon-on-transparent-background-free-png.webp" alt="fotoLogin" width="250px" height="150px">
-    <h3 class="principal_h3">Nome de usuário</h3>
-    <p id="princpal_paragrafo">id usuário</p>
-    <h3 class="principal_h3">Email: <span id="span_email"></span></h3> <!-- Span que recebe a variável de email do usuario-->
-    <div class="principal_text_senhas">
-    <input type="text" placeholder="Nova senha" class="text_senhas"> <input type="text" placeholder="Confirmar senha"  class="text_senhas"> </div>
-    <input type="password" placeholder="Senha atual"  class="text_senhas">
-    <button id="bt_altera_senha">Alterar senha</button>
-    <a href="./paginainicial.html"><button id="botao_voltar" class="stylepoint">Voltar</button> </a> 
-    </section>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Login</title>
+        <link rel="stylesheet" href="../css/paginamudarSenha.css" />
+    </head>
+    <body>
+        <section class="conteudo_principal">
+            <h1 class="principal_h1">EDITAR USUÁRIO</h1>
+            <img
+                src="../fotos/user-icon-on-transparent-background-free-png.webp"
+                alt="fotoLogin"
+                width="250px"
+                height="150px"
+            />
+            <h3 class="principal_h3">Nome de usuário</h3>
+            <p id="princpal_paragrafo">id usuário</p>
+            <h3 class="principal_h3">Email: <span id="span_email"></span></h3>
+            <!-- Span que recebe a variável de email do usuario-->
+            <div class="principal_text_senhas">
+                <input
+                    type="text"
+                    placeholder="Nova senha"
+                    class="text_senhas"
+                />
+                <input
+                    type="text"
+                    placeholder="Confirmar senha"
+                    class="text_senhas"
+                />
+            </div>
+            <input
+                type="password"
+                placeholder="Senha atual"
+                class="text_senhas"
+            />
+            <button id="bt_altera_senha">Alterar senha</button>
+            <a href="./paginainicial.html"
+                ><button id="botao_voltar" class="stylepoint">Voltar</button>
+            </a>
+        </section>
+    </body>
 </html>
