--- a/paginas/telaRegistro.html
+++ b/paginas/telaRegistro.html
@@ -1,27 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="../css/registro.css">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Login</title>
+        <link rel="stylesheet" href="../css/registro.css" />
+    </head>
+    <body>
+        <section class="section_class">
+            <h1>Registre-se!</h1>
+            <p>Coloque seu <span> e-mail</span></p>
+            <input
+                type="text"
+                class="barra_section"
+                id="email_section"
+                placeholder="Seu email "
+            />
+            <p>Coloque seu <span> usuário</span></p>
+            <input
+                type="text"
+                class="barra_section"
+                id="usuario_section"
+                placeholder=" usuário"
+            />
+            <p>Coloque sua <span> senha</span></p>
+            <input
+                type="password"
+                class="barra_section"
+                id="senha_section"
+                placeholder="Sua senha"
+            />
+            <p>Confirme sua <span> senha</span></p>
+            <input
+                type="password"
+                class="barra_section"
+                id="confirmarSenha_section"
+                placeholder="Confirme senha"
+            />
 
-</head>
-<body>
-
-    <section class="section_class">
-        <h1>Registre-se!</h1>
-        <p>Coloque seu <span> e-mail</span></p>
-        <input type="text" class="barra_section" id="email_section" placeholder="Seu email ">
-           <p>Coloque seu <span> usuário</span></p>
-              <input type="text" class="barra_section" id="usuario_section" placeholder=" usuário">
-                 <p>Coloque sua <span> senha</span></p>
-        <input type="password" class="barra_section"  id="senha_section" placeholder="Sua senha">
-           <p>Confirme sua <span> senha</span></p>
-                <input type="password" class="barra_section"  id="confirmarSenha_section" placeholder="Confirme senha">
-       
-         <a href="../index.html"><button>Entrar</button> </a>
-    </section>
-    
-</body>
+            <a href="../index.html"><button>Entrar</button> </a>
+        </section>
+    </body>
 </html>
