Mudar nome do projeto, bloco e classe
Adicionado sistema para alterar o nome do projeto, dos blocos e das classes.

--- a/paginas/paginaProjetos.html
+++ b/paginas/paginaProjetos.html
@@ -10,7 +10,8 @@
     </head>
     <body>
         <header class="header__principal">
-            <h1 class="header__h1"></h1>
+            <input type="text" name="nomeProjeto" class="header__h1" id="id_nomeProjeto" hidden>
+            <h1 class="header__h1" id="id_header__h1" hidden></h1>
             <div id="barraProgresso">
                 <h3>Concluido 100%</h3>
                 <div id="progresso"></div>
