--- a/paginas/trocarSenha.html
+++ b/paginas/trocarSenha.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trocar Senha</title>
     <link rel="stylesheet" href="../css/telaTrocarSenha.css">
+    <script defer type="module" src="../scriptsss/trocarSenha.js"></script>
 </head>
 <body>
     <section class="section_class">
@@ -17,9 +18,9 @@
          <input type="password" class="barra_section"  id="senha_section" placeholder="Sua senha">
 
          <p>Confirme sua <span> senha</span></p>
-         <input type="password" class="barra_section"  id="senha_section" placeholder="Confirmar senha">
+         <input type="password" class="barra_section"  id="nova_Senha_section" placeholder="Confirmar senha">
 
-         <a href="../index.html"><button>Entrar</button></a>
+        <button id="id_botaoEntrar">Trocar Senha</button>
     </section>
 </body>
 </html>
