Alterar status do projeto
Adicionado código para alterar o status do projeto (Não Iniciado, Em Andamento, Finalizado)

--- a/paginas/paginainicial.html
+++ b/paginas/paginainicial.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coletadores</title>
+    <title>Atlas</title>
     <link rel="stylesheet" href="../css/paginaicial.css">
     <script async src="https://cse.google.com/cse.js?cx=134692102cf0a43d7" defer></script>
     <script defer type="module" src="../scriptsss/codeInicial.js"></script>
