--- a/paginas/telaRegistro.html
+++ b/paginas/telaRegistro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Registro</title>
     <link rel="stylesheet" href="../css/registro.css">
     <script defer type="module" src="../scriptsss/registrarUsuario.js"></script>
 </head>
