Adicionar Participantes em um Projeto
Foi criado uma função que se pode adicionar várias outras pessoas em um projeto

--- a/paginas/paginaProjetos.html
+++ b/paginas/paginaProjetos.html
@@ -20,5 +20,21 @@
         <button class="main__botao">Criar novo bloco</button>
         <main class="main__principal">
         </main>
+
+        <section class="menu_add__pessoas">
+            <div id="listaPessoas">
+                    <h2>Membros do Projeto:</h2>
+                    <div id="pessoasContainer"></div>
+                    <ul id="id_listaParticipantes">
+                    </ul>
+            </div>
+
+            <div class="add__pessoas">
+                <input type="text" class="input_nome" placeholder="Nome do Participante: ">
+                <button class="add__pessoas__botao">Adicionar Participantes</button>
+            </div>
+        </section>
+        
+        
     </body>
 </html>
