--- a/paginas/paginaProjetos.html
+++ b/paginas/paginaProjetos.html
@@ -39,5 +39,19 @@
         </header>
         <button class="main__botao">Criar novo bloco</button>
         <main class="main__principal"></main>
+
+        <section class="menu_add__pessoas">
+            <div id="listaPessoas">
+                <h2>Membros do Projeto:</h2>
+                <div id="pessoasContainer">
+                    <ul id="id_listaParticipantes"></ul>
+                </div>
+            </div>
+
+            <div class="add__pessoas">
+                <input type="text" class="input_nome" placeholder="Email do Participante">
+                <button class="add__pessoas__botao">Adicionar Participantes</button>
+            </div>
+        </section>
     </body>
 </html>
