--- a/paginas/paginainicial.html
+++ b/paginas/paginainicial.html
@@ -19,9 +19,6 @@
                     <i class="fa-solid fa-magnifying-glass "></i>
                 </div>
             </li></div>
-            <li class="header__li">
-                <button class="button_li allButtons stylepoint" id="id_botao_sair">Sair</button></a> 
-            </li>
             <li class="header__li" id="menuLateral-abrir"><i class="fa-solid fa-bars stylepoint"></i></li>
         </ul>
     </header>
@@ -32,7 +29,7 @@
         <li><i class="fa-solid fa-gear"></i> Configurações</li>
         <li><i class="fa-solid fa-trash"></i> Lixeira</li>
         <li><i class="fa-solid fa-circle-question"></i> Ajuda</li>
-        <a href="../index.html"><li><i class="fa-solid fa-right-from-bracket"></i> Sair</li></a>
+        <a href="../index.html"><li><i id="id_botao_sair" class="fa-solid fa-right-from-bracket"></i> Sair</li></a>
     </ul>
 </section>
 
