bom dia atualizado front end

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Login</title>
-        <link rel="stylesheet" href="./css/style.css" />
+        <link rel="stylesheet" href="./css/styeWhite.css" />
         <script defer type="module" src="./scriptsss/logarUsuario.js"></script>
     </head>
     <body>
+        <main>
         <section class="section_class">
             <h1>Seja bem-vindo!</h1>
 
@@ -39,5 +40,15 @@
 
             <input type="submit" value="Entrar" id="id_botao_login"/>
         </section>
+                    <section class="" id="login_direita">
+        <h1>Atlas Flow</h1>
+        
+        <div id="bunda"><img src="fotos/ImagemTeste.png" alt=""></div>
+
+        <h2>Bem vindo!</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt numquam vero eius maxime earum necessitatibus, voluptatum dolor distinctio vitae a corporis eaque pariatur libero nemo impedit placeat, accusamus cumque debitis.</p>
+        </div>
+    </section>
+</main>
     </body>
 </html>
