Menu de alteração do projeto funcionando
Adicionado sistema de compartilhar, renomear e apagar projeto na página inicial. Sistema de compartilhar ainda não funciona 100%.

--- a/paginas/paginainicial.html
+++ b/paginas/paginainicial.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/paginainicialWhite.css">
     <script async src="https://cse.google.com/cse.js?cx=134692102cf0a43d7" defer></script>
     <script defer type="module" src="../scriptsss/codeInicial.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 <body>
     <header class="header">
