--- a/paginas/paginainicial.html
+++ b/paginas/paginainicial.html
@@ -13,7 +13,7 @@
     <header class="header">
         <ul class="header__ul">
             <li class="header__li" id="headerLogo"> <img src="../fotos/icon.png" id="iconeHeader" alt=""><H3 class="header__h3 stylepoint">AtlasFlow</H3></li>
-            <li class="header__li"><H3 class="header__h3 stylepoint">Calendário</H3></li>
+            <li class="header__li"><h3 class="header__h3 stylepoint">Calendário</h3></li>
             <div id="bundabunda"><li>
                 <div class="pesquisa">
                     <input type="search" placeholder="Pesquisar Projetos" class="meio__item pesquisaInput">
