--- a/paginas/paginainicial.html
+++ b/paginas/paginainicial.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="../css/paginainicialWhite.css">
     <script async src="https://cse.google.com/cse.js?cx=134692102cf0a43d7" defer></script>
     <script defer type="module" src="../scriptsss/codeInicial.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 <body>
     <header class="header">
         <ul class="header__ul">
             <li class="header__li" id="headerLogo"> <img src="../fotos/icon.png" id="iconeHeader" alt=""><H3 class="header__h3 stylepoint">AtlasFlow</H3></li>
-            <li class="header__li"><H3 class="header__h3 stylepoint">Calendário</H3></li>
+            <li class="header__li"><h3 class="header__h3 stylepoint">Calendário</h3></li>
             <div id="bundabunda"><li>
                 <div class="pesquisa">
                     <input type="search" placeholder="Pesquisar Projetos" class="meio__item pesquisaInput">
@@ -23,15 +24,15 @@
         </ul>
     </header>
 
-<section id="menuLateral">
-    <ul>
-        <a href="./paginaMudarsenha.html"><li><i class="fa-solid fa-user"></i> Perfil</li></a>
-        <li><i class="fa-solid fa-gear"></i> Configurações</li>
-        <li><i class="fa-solid fa-trash"></i> Lixeira</li>
-        <li><i class="fa-solid fa-circle-question"></i> Ajuda</li>
-        <a href="../index.html"><li><i id="id_botao_sair" class="fa-solid fa-right-from-bracket"></i> Sair</li></a>
-    </ul>
-</section>
+    <section id="menuLateral">
+        <ul>
+            <a href="./paginaMudarsenha.html"><li><i class="fa-solid fa-user"></i> Perfil</li></a>
+            <li><i class="fa-solid fa-gear"></i> Configurações</li>
+            <li><i class="fa-solid fa-trash"></i> Lixeira</li>
+            <li><i class="fa-solid fa-circle-question"></i> Ajuda</li>
+            <a href="../index.html"><li><i id="id_botao_sair" class="fa-solid fa-right-from-bracket"></i> Sair</li></a>
+        </ul>
+    </section>
 
     <hr>
 
