--- a/paginas/trocarSenha.html
+++ b/paginas/trocarSenha.html
@@ -1,43 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Trocar Senha</title>
-        <link rel="stylesheet" href="../css/telaTrocarSenha.css" />
+        <link rel="stylesheet" href="../css/telaTrocarSenha.css">
+        <script defer type="module" src="../scriptsss/trocarSenha.js"></script>
 </head>
 <body>
-    <div id="pai">
     <section class="section_class">
         <h1>Trocar Senha</h1>
 
         <p>Coloque seu <span> e-mail ou usuário</span></p>
-        <input
-            type="text"
-            class="barra_section"
-            id="usuario_section"
-            placeholder="Seu email ou usuário"
-        />
+        <input type="text" class="barra_section" id="usuario_section" placeholder="Seu email ou usuário">
 
         <p>Coloque sua <span> senha</span></p>
-        <input
-            type="password"
-            class="barra_section"
-            id="senha_section"
-            placeholder="Sua senha"
-        />
+        <input type="password" class="barra_section"  id="senha_section" placeholder="Sua senha">
 
         <p>Confirme sua <span> senha</span></p>
-        <input
-            type="password"
-            class="barra_section"
-            id="senha_section"
-            placeholder="Confirmar senha"
-        />
+        <input type="password" class="barra_section"  id="nova_Senha_section" placeholder="Confirmar senha">
 
-
-        <a href="../index.html"><button>Entrar</button></a>
+        <button id="id_botaoEntrar">Trocar Senha</button>
     </section>
-    </div>
 </body>
 </html>
