Botões de páginas e barra de progresso
Adicionados os caminhos para outras páginas (página inicial e página de calendário) e adicionado o código para barra de progresso (tanto na página do projeto quanto na página inicial).

--- a/paginas/paginaCalendario.html
+++ b/paginas/paginaCalendario.html
@@ -10,7 +10,9 @@
 <body>
      <header class="header">
         <ul class="header__ul">
-            <li class="header__li" id="headerLogo"> <img src="../fotos/icon.png" id="iconeHeader" alt=""><H3 class="header__h3 stylepoint">AtlasFlow</H3></li>
+            <li class="header__li" id="headerLogo">
+                <a href="./paginainicial.html"><img src="../fotos/icon.png" id="iconeHeader" alt=""><h3 class="header__h3 stylepoint">AtlasFlow</h3></a>
+            </li>
           
             <li>
                 <div class="pesquisa">
