--- a/paginas/paginaProjetos.html
+++ b/paginas/paginaProjetos.html
@@ -17,8 +17,12 @@
     </head>
     <header class="header">
         <ul class="header__ul">
-            <li class="header__li" id="headerLogo"> <img src="../fotos/icon.png" id="iconeHeader" alt=""><H3 class="header__h3 stylepoint">AtlasFlow</H3></li>
-            <li class="header__li"><H3 class="header__h3 stylepoint">Calendário</H3></li>
+            <li class="header__li" id="headerLogo">
+                <a href="./paginainicial.html"><img src="../fotos/icon.png" id="iconeHeader" alt=""><h3 class="header__h3 stylepoint">AtlasFlow</h3></a>
+            </li>
+            <li class="header__li">
+                <a href="./paginaCalendario.html"><h3 class="header__h3 stylepoint">Calendário</h3></a>
+            </li>
             <div id="bundabunda"><li>
                 <div class="pesquisa">
                     <input type="search" placeholder="Pesquisar Projetos" class="meio__item pesquisaInput">
@@ -56,7 +60,7 @@
                 <div id="bloco__status"></div>
             </div>
             <div id="barraProgresso">
-                <h3>Concluido 100%</h3>
+                <h3 id="id_textoProgresso">Concluído 100%</h3>
                 <div id="progresso"></div>
             </div>
 
