Botão de compartilhados
Adicionado botão para filtrar por projetos compartilhados.

--- a/paginas/paginainicial.html
+++ b/paginas/paginainicial.html
@@ -43,6 +43,7 @@
         <button class="buttonStatus stylepoint" id="ButtonStatusVermelho">Não iniciado</button>
         <button class="buttonStatus stylepoint" id="ButtonStatusAmarelo">Em andamento</button>
         <button class="buttonStatus stylepoint" id="ButtonStatusVerde">Finalizado</button>
+        <button class="buttonStatus stylepoint" id="ButtonStatusAzul">Compartilhado</button>
     </section>
 
     <main class="mainBlocos" id="id_mainBlocos">
