--- a/paginas/paginaProjetos.html
+++ b/paginas/paginaProjetos.html
@@ -23,15 +23,11 @@
             <li class="header__li">
                 <a href="./paginaCalendario.html"><h3 class="header__h3 stylepoint">Calendário</h3></a>
             </li>
-            <div id="bundabunda"><li>
-                <div class="pesquisa">
-                    <input type="search" placeholder="Pesquisar Projetos" class="meio__item pesquisaInput">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </div>
-            </li></div>
             <li class="header__li" id="menuLateral-abrir"><i class="fa-solid fa-bars stylepoint"></i></li>
         </ul>
     </header>
+
+    <hr>
 
     <section id="menuLateral">
         <ul>
@@ -44,7 +40,7 @@
     </section>
 
     <body>
-        <header class="header__principal">
+        <section class="header__principal">
             <div class="texto__emcima_da_barra">
                 <div id="botao__renomear">
                     <i class="fa-solid fa-pen-to-square"></i>
@@ -77,7 +73,7 @@
                     <button class="add__pessoas__botao">Adicionar Participantes</button>
                 </div>
             </section>
-        </header>
+        </section>
         <button class="main__botao">Criar novo bloco</button>
         <main class="main__principal"></main>
     </body>
