--- a/paginas/paginaCalendario.html
+++ b/paginas/paginaCalendario.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendario</title>
     <link rel="stylesheet" href="../css/Paginacalendario.css">
+    <script src="/scriptsss/codeCalendario.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 <body>
@@ -13,18 +14,30 @@
             <li class="header__li" id="headerLogo">
                 <a href="./paginainicial.html"><img src="../fotos/icon.png" id="iconeHeader" alt=""><h3 class="header__h3 stylepoint">AtlasFlow</h3></a>
             </li>
-          
-            <li>
+            <li class="header__li">
+                <a href="./paginaCalendario.html"><h3 class="header__h3 stylepoint">Calendário</h3></a>
+            </li>
+            <div id="bundabunda"><li>
                 <div class="pesquisa">
                     <input type="search" placeholder="Pesquisar Projetos" class="meio__item pesquisaInput">
-                    <i class="fa-solid fa-magnifying-glass "></i>
+                    <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
-            </li>
-
-            <li class="header__li" ><i class="fa-solid fa-bars stylepoint"></i></li>
+            </li></div>
+            <li class="header__li" id="menuLateral-abrir"><i class="fa-solid fa-bars stylepoint"></i></li>
         </ul>
     </header>
+
     <hr>
+
+    <section id="menuLateral">
+        <ul>
+            <a href="./paginaMudarsenha.html"><li><i class="fa-solid fa-user"></i> Perfil</li></a>
+            <li><i class="fa-solid fa-gear"></i> Configurações</li>
+            <li><i class="fa-solid fa-trash"></i> Lixeira</li>
+            <li><i class="fa-solid fa-circle-question"></i> Ajuda</li>
+            <a href="../index.html"><li><i id="id_botao_sair" class="fa-solid fa-right-from-bracket"></i> Sair</li></a>
+        </ul>
+    </section>
 
     <h1 id="h1__principal">Calendário</h1>
 
